--- a/fluent-ui/index.html
+++ b/fluent-ui/index.html
@@ -9,8 +9,8 @@
         }
 
         .custom {
-            --card-width: 300px;
-            --card-height: 300px;
+            width: 300px;
+            height: 300px;
             padding: 22px;
         }
         fieldset {
