--- a/voice-to-speach/index.html
+++ b/voice-to-speach/index.html
@@ -8,7 +8,8 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <button onClick="GetSpeech(this)"><i class="fa-solid fa-microphone">Listen and transcribe</i> </button>
+    <h2>SpeechRecognition || webkitSpeechRecognition demo</h2>
+    <button onClick="GetSpeech(this)"><i class="fa-solid fa-microphone">Click me to listen and transcribe</i> </button>
     <div id="status"></div>
     <textarea id="output"></textarea>
 </body>
