main New demo example 100% size

--- a/idrag-fp/drag-iframe.html
+++ b/idrag-fp/drag-iframe.html
@@ -37,6 +37,7 @@
 <body>
 <div class="box">
 	<div class="title">Me</div>
+	<p>Full page iframe fit demo</p>
 	<input value="Some input"/>
 	<button onClick="toggleFixed()">Toggle fixed pos</button>
 	
