Added link to lightgallery

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="xss/">XSS Run panel</a></li>
         <li><a href="fluent-ui/">Fluent-ui</a></li>
         <li><a href="voice-to-text/">Voice to text via webkitSpeechRecognition</a></li>
+        <li><a href="light-gallery/">Simple lightGalleryJS usage demo</a></li>
     </ul>
 </body>
 </html>
