--- a/light-gallery/index.html
+++ b/light-gallery/index.html
@@ -45,10 +45,9 @@
 	</head>
 	<body>
 		<div class="top-navigation">
-			<a href="#">Home</a>
+			<a href="/">Home</a>
 			<a href="#">Gallery</a>
-			<a href="#">About</a>
-			<a href="#">Contact</a>
+			<a href="https://www.lightgalleryjs.com/">About</a>
 		</div>	
 		<h1 class="intro-message">Welcome to the Lightgallery Demo</h1>
 		
