--- a/web-events/index.html
+++ b/web-events/index.html
@@ -58,9 +58,14 @@
         </div>
 
         <div class="data-requester-container">
-            <h2>Purchase Products</h2>
+            <h2>Purchase Products - client 1</h2>
             <data-requester></data-requester>
         </div>
+        <div class="data-requester-container">
+            <h2>Purchase Products - client 2</h2>
+            <data-requester></data-requester>
+        </div>
+
     </div>
 </body>
 </html>
