--- a/web-events/index.html
+++ b/web-events/index.html
@@ -23,20 +23,8 @@
         .product-item:last-child {
             border-bottom: none;
         }
-        .purchase-button {
-            padding: 8px 12px;
-            background: #4caf50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .purchase-button:hover {
-            background: #45a049;
-        }
-        .purchase-button:disabled {
-            background: #ccc;
-            cursor: not-allowed;
+        data-requester::part(button) {
+            background: #ff5722;
         }
     </style>
     <script src="data-flow.js"></script>
@@ -48,24 +36,25 @@
         <div class="product-list">
             <div class="product-item">
                 <span>Product 1</span>
-                <span id="product1-count">10</span>
+                <span id="product-1-count">10</span>
             </div>
             <div class="product-item">
                 <span>Product 2</span>
-                <span id="product2-count">8</span>
+                <span id="product-2-count">8</span>
             </div>
             <!-- Add more products as needed -->
         </div>
 
         <div class="data-requester-container">
             <h2>Purchase Products - client 1</h2>
-            <data-requester></data-requester>
+            <product-purchase></product-purchase>
         </div>
         <div class="data-requester-container">
             <h2>Purchase Products - client 2</h2>
-            <data-requester></data-requester>
+            <product-purchase></product-purchase>
         </div>
 
+        <user-profile-card data-user-name="Bob"></user-profile-card>
     </div>
 </body>
 </html>
