Refactor event handling and component structure; remove deprecated components and introduce validating event bus

--- a/web-events/demo.html
+++ b/web-events/demo.html
@@ -27,13 +27,17 @@
 <body>
 
     <div class="container">
+        <theme-receiver>
         <h1>Balloon Game</h1>
         <p>Click the balloons to pop them!</p>
         <balloon-game id="game1"></balloon-game>
         <balloon-game id="game2"></balloon-game>
         <balloon-game id="game3"></balloon-game>
         <score-tracker></score-tracker>
+        </theme-receiver>
     </div>
 
+    <theme-switcher></theme-switcher>
+    <theme-receiver>Hello</theme-receiver>
 </body>
 </html>
